# evangelix

./: 0001-Pass-no-check-certificate-to-wget.patch  Dockerfile  Makefile
src/frontend/: AngelixCommon.h  CMakeLists.txt
src/frontend/repairable/: CMakeLists.txt  InstrumentRepairable.cpp  MakeRepairable.cpp
src/frontend/suspicious/: InstrumentSuspicious.cpp
src/frontend/tidy/: CMakeLists.txt  Tidy.cpp
src/repair/: main.py  project.py  testing.py  transformation.py  utils.py
